added robot trigger
