# swagger.json
@@ -69,6 +69,35 @@
         }
       }
     },
+    "/api/GetRequestsByStatusId": {
+      "get": {
+        "tags": [
+          "request"
+        ],
+        "summary": "Get unassigned Requests ",
+        "description": "",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "request_status_type_id",
+            "type": "string",
+            "description": "Get the Request by status Id",
+            "required": true
+          }
+        ],
+        "responses": {
+          "405": {
+            "description": "Invalid input"
+          }
+        }
+      }
+    },
     "/api/GetRequests": {
       "get": {
         "tags": [
